# project-pymso

./: 2-copy.docx  2.docx  3.2.docx  3.docx  README.md  _dev.py  _util.py  model.py  pyproject.toml
project/package/: __init__.py  _util.py  xml.py
project/package/docprops/: app.py
project/package/word/: __init__.py
project/tests/: __init__.py  test.py  test_equality.py  test_parse.py  test_save.py
project/tests/files/: example.copy.docx  example.docx
project_package/package/: DocX.py  Relationships.py  XmlDecl.py  __init__.py  _util.py  cont.py  content_types.py  docx.py  rels.py  xml.py  xmldecl.py
project_package/package/docprops/: __init__.py  app.py  core.py
project_package/package/word/: document.py
project_package/tests/: __init__.py  test.py  test_equality.py  test_parse.py  test_save.py
project_package/tests/files/: example-edited.docx  example.copy.docx  example.docx  ~$ample-edited.docx
test-files/: 2.2.docx  example.copy.docx  example.docx  ~$xample.docx
